# dhc

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  TODO.md  annotated.html  choice_8hpp_source.html  classdhc_1_1graft_1_1match_1_1character-members.html  classdhc_1_1graft_1_1match_1_1character.html  classdhc_1_1graft_1_1match_1_1match-members.html  classdhc_1_1graft_1_1match_1_1match.html  classdhc_1_1graft_1_1match_1_1sequence-members.html  classdhc_1_1graft_1_1match_1_1sequence.html  classdhc_1_1graft_1_1match_1_1string-members.html  classdhc_1_1graft_1_1match_1_1string.html  classdhc_1_1graft_1_1pattern_1_1character-members.html  classdhc_1_1graft_1_1pattern_1_1character.html  classdhc_1_1graft_1_1pattern_1_1choice-members.html  classdhc_1_1graft_1_1pattern_1_1choice.html  classdhc_1_1graft_1_1pattern_1_1compound-members.html  classdhc_1_1graft_1_1pattern_1_1compound.html  classdhc_1_1graft_1_1pattern_1_1exclude-members.html  classdhc_1_1graft_1_1pattern_1_1exclude.html  classdhc_1_1graft_1_1pattern_1_1pattern-members.html  classdhc_1_1graft_1_1pattern_1_1pattern.html  classdhc_1_1graft_1_1pattern_1_1property-members.html  classdhc_1_1graft_1_1pattern_1_1property.html  classdhc_1_1graft_1_1pattern_1_1repetition-members.html  classdhc_1_1graft_1_1pattern_1_1repetition.html  classdhc_1_1graft_1_1pattern_1_1string-members.html  classdhc_1_1graft_1_1pattern_1_1string.html  classdhc_1_1graft_1_1pattern_1_1type-members.html  classdhc_1_1graft_1_1pattern_1_1type.html  classdhc_1_1graft_1_1scanner_1_1character-members.html  classdhc_1_1graft_1_1scanner_1_1character.html  classdhc_1_1graft_1_1scanner_1_1scanner-members.html  classdhc_1_1graft_1_1scanner_1_1scanner.html  classdhc_1_1lexer_1_1digit-members.html  classdhc_1_1lexer_1_1digit.html  classdhc_1_1lexer_1_1integer-members.html  (+66 more)
ast/: module.cpp  module.hpp
ast/module/body/: class_assertion.hpp  classdecl.hpp  data.hpp  simpletype.hpp  typedecl.hpp
examples/: fueue.hs  fueue.html  haq.hs  haq.html  test.html
graft/: match.hpp  pattern.cpp  pattern.hpp  scanner.cpp  scanner.hpp  ustream.cpp  ustream.hpp
graft/match/: character.cpp  character.hpp  sequence.cpp  sequence.hpp  string.cpp  string.hpp
graft/pattern/: character.cpp  character.hpp  choice.cpp  choice.hpp  compound.cpp  compound.hpp  exclude.cpp  exclude.hpp  property.cpp  property.hpp  repetition.cpp  repetition.hpp  string.cpp  string.hpp
kernel/: expression.cpp  expression.hpp  maybe.hpp  pattern.cpp  pattern.hpp  type.cpp  type.hpp  typeerror.hpp
kernel/expression/: application.cpp  application.hpp  case.cpp  case.hpp  value.cpp  value.hpp  variable.cpp  variable.hpp
kernel/expression/value/: function.cpp  function.hpp  uservalue.cpp  uservalue.hpp
kernel/pattern/: constructor.cpp  constructor.hpp  ignored.cpp  ignored.hpp  variable.cpp  variable.hpp
kernel/type/: value.hpp
lexer/: digit.cpp  integer.cpp  layout.cpp  layout.hpp  lexer.cpp  lexer.hpp  lit_char.cpp  lit_char.hpp  lit_float.hpp  match.cpp  match.hpp  pattern.cpp  pattern.hpp  qualified.cpp  scanner.cpp  scanner.hpp
lexer/match/: character.cpp  character.hpp  digit.hpp  integer.hpp  lit_char.hpp  lit_float.cpp  lit_float.hpp  lit_string.cpp  lit_string.hpp  literal.hpp  qualified.cpp  qualified.hpp  sequence.cpp  sequence.hpp  string.cpp  string.hpp
lexer/pattern/: character.cpp  character.hpp  choice.cpp  choice.hpp  compound.cpp  compound.hpp  exclude.cpp  exclude.hpp  repetition.cpp  repetition.hpp  string.cpp  string.hpp
lib/graft/: match.hpp  pattern.cpp  pattern.hpp  scanner.cpp  scanner.hpp
lib/graft/match/: character.cpp  character.hpp  sequence.cpp  sequence.hpp  string.cpp  string.hpp
lib/graft/pattern/: character.cpp  character.hpp  choice.cpp  choice.hpp  compound.cpp  compound.hpp  exclude.cpp  exclude.hpp  property.cpp  property.hpp  repetition.cpp  repetition.hpp  string.cpp  string.hpp  type.cpp  type.hpp
lib/graft/scanner/: character.cpp  character.hpp
parser/: parser.cpp  parser.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  pages_1.js  (+9 more)
tests/: tests.cpp
